Update base project to 0.02
- Add comprehensive funding.md page
- Add some page descriptions
- Add various resourceful changes
- Remove license and stack from pagefind

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -1,12 +1,13 @@
 ---
 title: About Us
+description: We are an open source collective of mental health resources and peer support.
 editUrl: false
 ---
 :::tip[Did you know?]
 Our community is powered by emotional intelligence _**not**_ artificial intelligence.
 :::
 
-We are an [open source](/licensing) collaborative of mental health resources and peer support.
+We are an [open source](/licensing) collective of mental health resources and peer support.
 
 ## Our beliefs?
 
@@ -46,7 +47,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 ---
 
 :::danger[Disclaimer]
-*These resources are shared for educational and awareness purposes.*
+*These resources are shared for education and awareness.*
 
-**mymind.care and it's community are not responsible for your decisions.**
+**mymind.care and it's community are not responsible for your actions.**
 :::
