--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-description: Get started on mental health care
+description: Join the world's fastest growing collective of mental health resources and peer support community designed for inclusivity.
 template: splash
 hero:
   tagline: Support over crisis. Community over chaos.
