--- a/src/content/docs/licensing.mdx
+++ b/src/content/docs/licensing.mdx
@@ -2,6 +2,7 @@
 title: The MIT License
 tableOfContents: false
 editUrl: false
+pagefind: false
 ---
 export const year = new Date().getFullYear();
 
