Update base project to 0.03
- Add external Discord links across site
- Add trailing Slashes 'never' preference

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,10 +10,10 @@ hero:
     - text: Get Care
       link: /about
       icon: right-arrow
-    # - text: Join us on Discord
-    #   link: https://#
-    #   icon: external
-    #   variant: minimal
+    - text: Join us on Discord
+      link: https://discord.mymind.care
+      icon: external
+      variant: minimal
 editUrl: false
 ---
 ---
