--- a/src/content/docs/questions.mdx
+++ b/src/content/docs/questions.mdx
@@ -1,11 +1,17 @@
 ---
 title: Contact Us
-description: Have a question? We're here to answer.
+description: Have a question? Reach out to us.
 order: 1
 tableOfContents: false
 editUrl: false
 ---
 import { Card, LinkCard } from '@astrojs/starlight/components';
+
+<LinkCard
+  title="Peer support"
+  href="https://discord.mymind.care"
+  description="Join us on discord"
+/>
 
 <LinkCard
   title="Tech support"
