Update base project to 0.04
- Add content gating for sensitive material
- Update routing clarity for contact page
- Update vad.md to dignity.mdx
- Fix some minor conventions

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -42,7 +42,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 ## Have a question?
 <LinkCard
   title="Reach out to us"
-  href="/questions"
+  href="/contact"
 />
 ---
 
