Update base project to 0.05
- Add modular warning property to ContentGate
- Add push workflow for the Discord

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/resources/dignity.mdx
+++ b/src/content/docs/resources/dignity.mdx
@@ -6,7 +6,7 @@ sidebar:
 
 import ContentGate from '../../../components/ContentGate.astro';
 
-<ContentGate>
+<ContentGate warning="This section contains sensitive material pertaining to assisted death.">
   :::note[Keeping your dignitiy]
   If suffering becomes terminal you may seek a [dignified death](/right-to-die).
   :::
