Update dignity.mdx content
- Add softer wording to page note
- Add UK based advocacy group

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/resources/dignity.mdx
+++ b/src/content/docs/resources/dignity.mdx
@@ -7,8 +7,8 @@ sidebar:
 import ContentGate from '../../../components/ContentGate.astro';
 
 <ContentGate warning="This section contains sensitive material pertaining to assisted death.">
-  :::note[Keeping your dignitiy]
-  If suffering becomes terminal you may seek a [dignified death](/right-to-die).
+  :::note[Keeping dignity at life's end]
+  If suffering becomes terminal you may choose to seek a [dignified death](/right-to-die).
   :::
 
   ## 🇨🇭 Switzerland
@@ -17,4 +17,7 @@ import ContentGate from '../../../components/ContentGate.astro';
 
   ## 🇳🇱 Netherlands
   - [NVVE](https://www.nvve.nl/about-nvve): Dutch Association for a Voluntary End of Life.
+
+  ## 🇬🇧 United Kingdom
+- [Dignity in Dying](https://www.dignityindying.org.uk/): UK based end-of-life advocacy campaign.
 </ContentGate>
