Update about.mdx description
- Add SEO adjustments for description
- Update README for consistency

Signed-off-by: Serene <serene@mymind.care>

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -1,13 +1,13 @@
 ---
 title: About Us
-description: We are an open source collective of mental health resources and peer support.
+description: We are an open source mental health collective and peer support community.
 editUrl: false
 ---
 :::tip[Did you know?]
 Our community is powered by emotional intelligence _**not**_ artificial intelligence.
 :::
 
-We are an [open source](/licensing) collective of mental health resources and peer support.
+We are an [open source](/licensing) mental health collective and peer support community.
 
 ## Our beliefs?
 
